Исправил ошибки по рецензии - проработал верстку, теперь футер всегда внизу - убрал закомментированный код - применил аттрибут аутентифицированного юзера ко всему контроллеру PostController - пользователю в системе не доступен вход на страницу Login - поиск по имени реализован - решена проблема с неправильным отображением подписок и подписчиков - отпрака пустого коммента больше не крашит приложение

--- a/instagram/Views/Account/Profile.cshtml
+++ b/instagram/Views/Account/Profile.cshtml
@@ -35,12 +35,12 @@
       <ul>
       <li class="text-secondary"><span class="profile-stat-count text-secondary">@Model.Posts.Count</span> посты</li>
         <li>
-          <a class="myLink text-secondary" asp-action="GetFollowers" asp-controller="Account" asp-route-userName="@User.Identity.Name">
+          <a class="myLink text-secondary" asp-action="GetFollowers" asp-controller="Account" asp-route-userName="@Model.UserName">
             <span class="profile-stat-count">@Model.Followers.Count</span> подписчики
           </a>
         </li>
         <li>
-          <a class="myLink text-secondary" asp-action="GetSubscribe" asp-controller="Account" asp-route-userName="@User.Identity.Name">
+          <a class="myLink text-secondary" asp-action="GetSubscribe" asp-controller="Account" asp-route-userName="@Model.UserName">
             <span class="profile-stat-count">@Model.Subscriptions.Count</span> подписки
           </a>
         </li>
