--- a/instagram/Views/Shared/_Layout.cshtml
+++ b/instagram/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-<div class="container">
+<div class="mainContainer">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
