--- a/instagram/Views/Account/Profile.cshtml
+++ b/instagram/Views/Account/Profile.cshtml
@@ -33,7 +33,7 @@
     </div>
     <div class="profile-stats">
       <ul>
-      <li class="text-secondary"><span class="profile-stat-count text-secondary">@Model.Posts.Count</span> посты</li>
+      <li class="text-secondary"><span id="posts-@Model.UserName" class="profile-stat-count text-secondary">@Model.Posts.Count</span> посты</li>
         <li>
           <a class="myLink text-secondary" asp-action="GetFollowers" asp-controller="Account" asp-route-userName="@Model.UserName">
             <span id="followersCount" class="profile-stat-count">@Model.Followers.Count</span> подписчики
@@ -55,13 +55,44 @@
   <div class="row justify-content-center mt-5">
     @foreach(var post in Model.Posts)
     {
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" id="profilePost-@post.Id">
         <a asp-action="FullPost" asp-controller="Posts" asp-route-postId="@post.Id">
           <div class="card">
             <img src="@post.ImgPath" class="card-img-top" alt="@post.Id">
           </div>
         </a>
+        @if (User.Identity.Name == Model.UserName)
+          {
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Open modal</button>
+            <button type="button" accountName="@Model.UserName" postId="@post.Id" class="btn btn-danger btnPostDelete">Удалить запись</button>
+          }
       </div>
     }
+  </div>
+</div>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
   </div>
 </div>
