--- a/instagram/Views/Shared/_LayoutForAuthorizeUser.cshtml
+++ b/instagram/Views/Shared/_LayoutForAuthorizeUser.cshtml
@@ -30,6 +30,7 @@
     </div>
 </nav>
 <div class="mainContainer mt-5">
+    @Html.AntiForgeryToken()
     @RenderBody()
 </div>
 <footer class="border-top footer text-muted">
